# Beetle-Rover

./: .gitignore  .gitmodules  README.md
doc/: general_sm.smcat  mission_state_machine.smcat
rosws/src/camera_launch/: CMakeLists.txt  package.xml
rosws/src/camera_launch/launch/: realsense.launch.xml
rosws/src/locomotion_control_node/: CMakeLists.txt  __init__.py  package.xml  setup.py
rosws/src/locomotion_control_node/msg/: connected_motors.msg  encoder_values.msg  speed_values.msg
rosws/src/locomotion_control_node/src/: controller.py  custom.py  main.py  roboclaw.py  rover_config.yaml  rover_config_container.py  yaml_handler.py
rosws/src/locomotion_control_node/srv/: set_controller_mode.srv  stop.srv
rosws/src/mission_control/: CMakeLists.txt  package.xml
rosws/src/mission_control/launch/: challenge_simulation.launch  challenge_simulation_1.launch  challenge_simulation_2.launch  challenge_simulation_random.launch  move_base_rover.launch  move_base_simulation.launch  rover_aruco_analyzer.launch  rover_rtab_nav.launch  sumroII  tf_tree.launch
rosws/src/mission_control/src/: .mission_controller.py.swp  challenge_simulation.py  challenge_simulation_random.py  cube.py  mission_controller.py  mission_sm.py  run_mission.py  run_simulation_mission.py
rosws/src/rover_nav/: CMakeLists.txt  package.xml
rosws/src/rover_nav/launch/: move_base.launch  rover_rtab_nav.launch
rosws/src/rover_nav/param/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  teb_planner_params.yaml
rosws/src/turlesim_sumro/: CMakeLists.txt  setup.py
rosws/src/turlesim_sumro/src/: tflookup.py  (+1 more)
rosws/src/turtlesim_sumro/: package.xml
rosws/ssh/: sreng_summer_key  sreng_summer_key.pub
(+24 files in other folders)
