<?xml version="1.0"?>
<package>
  <name>rover_nav</name>
  <version>0.9.0</version>
  <description>Launch scripts and parameter files for rover navigation</description>

  <maintainer email="bsaendig@gmail.com">Bertram Saendig</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>rtabmap_ros</run_depend>
  <run_depend>move_base</run_depend>


</package>
